{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 3,
  "lineage": "acd64c9c-8ff5-e807-a3cc-ea4e5aefedbb",
  "resources": [
    {
      "module": "module.B_SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264402558:security-group/sg-00eddb98828d30f57",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00eddb98828d30f57",
            "ingress": [],
            "name": "EC2_SG",
            "name_prefix": "",
            "owner_id": "058264402558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_SG"
            },
            "tags_all": {
              "Name": "EC2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddc8bfd54da38ac8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.B_SG",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264402558:security-group-rule/sgr-0f1e87d758273c0c1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f1e87d758273c0c1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00eddb98828d30f57",
            "security_group_rule_id": "sgr-0f1e87d758273c0c1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.B_SG.aws_security_group.Terraform_SG"
          ]
        }
      ]
    }
  ]
}